<resources>
    <string name="app_name">ProjetAndroid2017-2018</string>
    <string name="moyen_4_x_4">Moyen 4 X 4</string>
    <string name="difficile_5_x_5">Difficile 5 X 5</string>
    <string name="facile_3_x_3">Facile 3 X 3</string>
    <string name="soundclick">SoundClick</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="restart">Restart</string>
</resources>
